--- a/contact.html
+++ b/contact.html
@@ -34,22 +34,26 @@
     <div id="content">
    
       <div id="box">
-          <h2>About Me</h2>
+          <h2>Contact</h2>
           <hr>  
 
-          <img src="https://avatars2.githubusercontent.com/u/4676364?v=3&u=df905e7a2bbd9d0eafca6d4bb0e494f64d6993f0&s=400" height="200px" width="200px">
+          <form>
+            Name<br>
+            <input type="text" name="name"><br>
 
-          <p>
+            Email<br>
+            <input type="text" name="email"><br>
 
-              Welcome to my Basic Portfolio Webpage! My name's Zachary Keeshin and I am currently
-              a student at the NU Coding Boot Camp. I'm excited to hone my web development skills
-              and build a portfolio using the newest programming languages. I started my college career
-              at the University of Michigan, and I have studied Sociology and Economics.
-              Please feel free to browse the rest of the website, and reach out to me if you think we
-              could work on a project together. Have a great day!
+            Message<br>
 
-          </p>
 
+
+          </form>
+
+
+          <textarea rows="13" cols="105"></textarea>
+                                
+          <div id="button">Submit</div>
 
       </div>
 
