--- a/gallery.html
+++ b/gallery.html
@@ -7,10 +7,6 @@
   <title>Basic Portfolio</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 
-
-
-
-
 </head>
 
 <body>
@@ -24,6 +20,10 @@
             <a href="#">Portfolio</a>
             <a href="#">Contact</a>
 
+
+   <!--      <p>About        Portfolio         Contact</p>
+
+ -->
       </div>
 
   </header>
@@ -34,21 +34,16 @@
     <div id="content">
    
       <div id="box">
-          <h2>About Me</h2>
+          <h2>Portfolio</h2>
           <hr>  
+          
+          <img src="download.jpeg">
 
-          <img src="https://avatars2.githubusercontent.com/u/4676364?v=3&u=df905e7a2bbd9d0eafca6d4bb0e494f64d6993f0&s=400" height="200px" width="200px">
+          <img src="woman.jpeg">
 
-          <p>
+          <img src="screws.jpeg">
 
-              Welcome to my Basic Portfolio Webpage! My name's Zachary Keeshin and I am currently
-              a student at the NU Coding Boot Camp. I'm excited to hone my web development skills
-              and build a portfolio using the newest programming languages. I started my college career
-              at the University of Michigan, and I have studied Sociology and Economics.
-              Please feel free to browse the rest of the website, and reach out to me if you think we
-              could work on a project together. Have a great day!
-
-          </p>
+          <img src="alcohol.jpeg">
 
 
       </div>
