--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,7 @@
 
   <meta charset="UTF-8">
   <title>Basic Portfolio</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-
-
-
-
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 
@@ -30,7 +26,6 @@
 
   <div id="main">
  
-
     <div id="content">
    
       <div id="box">
@@ -45,13 +40,9 @@
             <input type="text" name="email"><br>
 
             Message<br>
-
-
+            <textarea rows="13" cols="105"></textarea>
 
           </form>
-
-
-          <textarea rows="13" cols="105"></textarea>
                                 
           <div id="button">Submit</div>
 
@@ -60,19 +51,16 @@
       <div id="aside">
         <h3>Connect with Me</h3> 
         <hr>
-        <a href="https://github.com/zkeesh"><img src="github.png"></a>
-        <a href="https://www.linkedin.com/in/zach-keeshin-827033134?trk=nav_responsive_tab_profile_pic"><img src="LinkedIn.png"></a>
-        <a href="http://stackoverflow.com/users/7498630/zach-keeshin"><img src="stack-overflow.png"></a>
+        <a href="https://github.com/zkeesh"><img src="images/github.png"></a>
+        <a href="https://www.linkedin.com/in/zach-keeshin-827033134?trk=nav_responsive_tab_profile_pic"><img src="images/LinkedIn.png"></a>
+        <a href="http://stackoverflow.com/users/7498630/zach-keeshin"><img src="images/stack-overflow.png"></a>
         
 
       </div>
 
     </div>
 
-
-
   </div>
-
 
   <div id="footer">
     © Copyright 2017 Zach Keeshin
