--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8">
   <title>Basic Portfolio</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 
@@ -20,10 +20,6 @@
             <a href="#">Portfolio</a>
             <a href="#">Contact</a>
 
-
-   <!--      <p>About        Portfolio         Contact</p>
-
- -->
       </div>
 
   </header>
@@ -37,13 +33,13 @@
           <h2>Portfolio</h2>
           <hr>  
           
-          <img src="download.jpeg">
+          <img src="images/download.jpeg">
 
-          <img src="woman.jpeg">
+          <img src="images/woman.jpeg">
 
-          <img src="screws.jpeg">
+          <img src="images/screws.jpeg">
 
-          <img src="alcohol.jpeg">
+          <img src="images/alcohol.jpeg">
 
 
       </div>
@@ -51,16 +47,14 @@
       <div id="aside">
         <h3>Connect with Me</h3> 
         <hr>
-        <a href="https://github.com/zkeesh"><img src="github.png"></a>
-        <a href="https://www.linkedin.com/in/zach-keeshin-827033134?trk=nav_responsive_tab_profile_pic"><img src="LinkedIn.png"></a>
-        <a href="http://stackoverflow.com/users/7498630/zach-keeshin"><img src="stack-overflow.png"></a>
+        <a href="https://github.com/zkeesh"><img src="images/github.png"></a>
+        <a href="https://www.linkedin.com/in/zach-keeshin-827033134?trk=nav_responsive_tab_profile_pic"><img src="images/LinkedIn.png"></a>
+        <a href="http://stackoverflow.com/users/7498630/zach-keeshin"><img src="images/stack-overflow.png"></a>
         
 
       </div>
 
     </div>
-
-
 
   </div>
 
