--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8">
   <title>Basic Portfolio</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
@@ -40,7 +40,7 @@
             <input type="text" name="email"><br>
 
             Message<br>
-            <textarea rows="13" cols="105"></textarea>
+            <textarea rows="10" cols="105"></textarea>
 
           </form>
                                 
