--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8">
   <title>Basic Portfolio</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
@@ -29,18 +29,17 @@
 
     <div id="content">
    
-      <div id="box">
+      <div id="portfolio">
           <h2>Portfolio</h2>
           <hr>  
           
-          <img src="images/download.jpeg">
+          <img src="images/download.jpeg" style="margin:0px 50px">
 
           <img src="images/woman.jpeg">
 
-          <img src="images/screws.jpeg">
+          <img src="images/screws.jpeg" style="margin:0px 50px">
 
           <img src="images/alcohol.jpeg">
-
 
       </div>
 
@@ -59,7 +58,7 @@
   </div>
 
 
-  <div id="footer">
+ <div id="footer">
     © Copyright 2017 Zach Keeshin
 
   </div>
